# card-scanner

./: .gitignore  CLAUDE.md  README.md  cardtrader-deal-scanner-PRD.md
.claude/: settings.json
.claude/agents/: backend-agent.md  component-agent.md  design-agent.md  devops-agent.md  feature-agent.md  quality-agent.md  scan-engine-agent.md  security-agent.md  tauri-agent.md
.claude/commands/: deploy.md  lint.md  pr.md  test.md  validate.md
design_handoff_deal_scanner_dashboard/: Card Broker.html  app.jsx  aside.jsx  boot.jsx  components.jsx  data.js  effects.jsx  feed.jsx  health.jsx  settings.jsx  styles.css  ui.css  views.css  watchlist.jsx
desktop/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/src/: App.tsx  main.tsx  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
docs/: .bootstrap-discovery.md  phase-0-runbook.md  project-summary.md
docs/documentation/: architecture.md  cardtrader-client.md  dashboard-views.md  data-model.md  deal-engine.md  desktop-shell.md  http-api.md  local-scan.md  scanner.md  telegram.md
docs/standards/: claude-code-maintenance.md  coding-standards.md  naming-conventions.md  shared-standards.md
worker/: .dev.vars.example  .gitignore  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.scripts.json  wrangler.toml
worker/scripts/: build-sidecar.mjs  catalogResync.ts  d1-http.ts  env-local.ts  (+2 more)
(+147 files in other folders)
