[package]
name = "card-broker"
version = "0.1.0"
edition = "2021"
description = "Card // Broker — CardTrader Deal Scanner desktop host"
license = "MIT"

# See Tauri v2 feature reference:
# https://v2.tauri.app/reference/config/

# Tauri v2 convention: lib.rs exports `run()`, main.rs calls `<lib_name>::run()`.
# Explicit [lib] name keeps the crate identifier predictable regardless of package name.
[lib]
name = "card_broker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
